examples/envoy/proxy.yaml
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
static_resources:
  clusters:
    - name: ratelimit
      type: STRICT_DNS
      connect_timeout: 1s
      lb_policy: ROUND_ROBIN
      protocol_selection: USE_CONFIGURED_PROTOCOL
      http2_protocol_options: {}
      load_assignment:
        cluster_name: ratelimit
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: ratelimit
                      port_value: 8081
    - name: mock
      connect_timeout: 1s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: mock
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: envoy-mock
                      port_value: 9999
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 8888
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress
                http_filters:
                  # first ratelimit for RPM
                  - name: envoy.filters.http.set_filter_state
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.set_filter_state.v3.Config
                      on_request_headers:
                        - object_key: envoy.ratelimit.hits_addend # must have an object factory
                          format_string:
                            text_format_source:
                              inline_string: "%REQ(RL-HITS-RPM)%"
                  - name: envoy.filters.http.header_mutation
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.header_mutation.v3.HeaderMutation
                      mutations:
                        request_mutations:
                          - append:
                              header:
                                key: "x-rl-type"
                                value: "rpm"
                  - name: envoy.filters.http.ratelimit
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimit
                      domain: rl
                      request_type: external
                      stage: 0
                      rate_limited_as_resource_exhausted: true
                      failure_mode_deny: false
                      enable_x_ratelimit_headers: DRAFT_VERSION_03
                      rate_limit_service:
                        grpc_service:
                          envoy_grpc:
                            cluster_name: ratelimit
                        transport_api_version: V3
                  # second ratelimit for TPM
                  - name: envoy.filters.http.set_filter_state
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.set_filter_state.v3.Config
                      on_request_headers:
                        - object_key: envoy.ratelimit.hits_addend # must have an object factory
                          format_string:
                            text_format_source:
                              inline_string: "%REQ(RL-HITS-TPM)%"
                  - name: envoy.filters.http.header_mutation
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.header_mutation.v3.HeaderMutation
                      mutations:
                        request_mutations:
                          - append:
                              header:
                                key: "x-rl-type"
                                value: "tpm"
                              appendAction: OVERWRITE_IF_EXISTS
                  - name: envoy.filters.http.ratelimit
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimit
                      domain: rl
                      request_type: external
                      stage: 0
                      rate_limited_as_resource_exhausted: true
                      failure_mode_deny: false
                      enable_x_ratelimit_headers: DRAFT_VERSION_03
                      rate_limit_service:
                        grpc_service:
                          envoy_grpc:
                            cluster_name: ratelimit
                        transport_api_version: V3
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                route_config:
                  name: route
                  virtual_hosts:
                    - name: backend
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: /test
                          route:
                            cluster: mock
                            rate_limits:
                              - actions:
                                  - source_cluster: {} # This action's value is populated by the "service-cluster" arg passed in when starting Envoy. In this example, it's "proxy" (see docker-compose-example.yml)
                                  - destination_cluster: {} # This action's value is populated by the value set in the above egress "cluster" field -- "mock"
                                  - request_headers:
                                      header_name: "x-rl-type"
                                      descriptor_key: "x-rl-type"
                        - match:
                            prefix: /header
                          route:
                            cluster: mock
                            rate_limits:
                              - actions:
                                  - request_headers:
                                      header_name: "foo"
                                      descriptor_key: "foo"
                        - match:
                            prefix: /twoheader
                          route:
                            cluster: mock
                            rate_limits:
                              - actions:
                                  - request_headers:
                                      header_name: "foo"
                                      descriptor_key: "foo"
                                  - request_headers:
                                      header_name: "bar"
                                      descriptor_key: "bar"
                              - actions:
                                  - request_headers:
                                      header_name: "foo"
                                      descriptor_key: "foo"
                                  - request_headers:
                                      header_name: "baz"
                                      descriptor_key: "baz"
                        - match:
                            prefix: /fourheader
                          route:
                            cluster: mock
                            rate_limits:
                              - actions:
                                  - request_headers:
                                      header_name: "foo"
                                      descriptor_key: "foo"
                                  - request_headers:
                                      header_name: "bar"
                                      descriptor_key: "bar"
                              - actions:
                                  - request_headers:
                                      header_name: "source_cluster"
                                      descriptor_key: "source_cluster"
                                  - request_headers:
                                      header_name: "destination_cluster"
                                      descriptor_key: "destination_cluster"
                        - match:
                            prefix: /fiveheader
                          route:
                            cluster: mock
                            rate_limits:
                              - actions:
                                  - request_headers:
                                      header_name: "foo"
                                      descriptor_key: "foo"
                                  - request_headers:
                                      header_name: "bar"
                                      descriptor_key: "bar"
                              - actions:
                                  - request_headers:
                                      header_name: "source_cluster"
                                      descriptor_key: "source_cluster"
                                  - request_headers:
                                      header_name: "destination_cluster"
                                      descriptor_key: "destination_cluster"
                              - actions:
                                  - request_headers:
                                      header_name: "category"
                                      descriptor_key: "category"
                        - match:
                            prefix: /unspec
                          route:
                            cluster: mock
                            rate_limits:
                              - actions:
                                  - request_headers:
                                      header_name: "unspec"
                                      descriptor_key: "unspec"
